# hddCRP

./: .gitignore  LICENSE  README.md  environment.yml  fit_data_new.ipynb  fit_data_new2.ipynb  fit_data_new3.ipynb  fit_markov_models.ipynb  fit_new_model.ipynb  fit_rat_data_individual_model.ipynb  fit_rat_data_individual_model_fix_alpha.ipynb  fit_rat_data_population_loo.ipynb  fit_rat_data_population_loo_tau.ipynb  fit_rat_data_population_model.ipynb  fit_rat_data_population_variable_selection.ipynb  fit_simulations.ipynb  gibbs_sample_example.ipynb  make_simulation_results_figures.ipynb  markov.ipynb  model_rats.ipynb  model_rats_pop.ipynb  newContextModel.py  plot_KL_divergences.ipynb  plot_data_new.ipynb  plot_data_new2.ipynb  plot_simulation_results.ipynb  plot_simulation_results_simple.ipynb  pyproject.toml  rawDataLoader.ipynb  runFixedAlphaFit.py  runMarkovSimsScript.py  runSimsScript.py  runSimulation.py  runSimulations.ipynb  setup.cfg  simple_sim.ipynb  simulation_figures.ipynb  simulation_testing.ipynb  simulation_testing2.ipynb  stanModel.txt  (+2 more)
StanModel/: teststan.ipynb
src/hddCRP/: __init__.py  behaviorDataHandlers.py  behaviorDataHandlers_old.py  dataLoader.py  markovModeling.py  modelBuilder.py  modelFitting.py  modelFittingSequential.py  modelFittingSequentialWithBase.py  newContextModel.py  newContextModel2.py  newContextModel3.py  simulations.py  simulations_old.py  stanModels.py
src/hddCRP/backupWithOldModels/: behaviorDataHandlers.py  modelFitting.py  modelFittingSequential.py  simulations.py
